<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suretodelete"
            android:textSize="26dp"
            android:layout_marginBottom="4dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/surebutton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/myprotoceldetiledeletedialogbuttonshape"
                android:textSize="14sp"
                android:text="@string/sure"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                >
                <Button
                    android:id="@+id/canclebutton"
                    android:layout_width="wrap_content"
                    android:background="@drawable/myprotoceldetiledeletedialogbuttonshape"
                    android:layout_height="36dp"
                    android:textSize="14sp"
                    android:text="@string/cancle"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
