<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="13dp"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/filenametextview"
        android:layout_width="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/aboutdeveloper"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/sendporttextview"
        android:layout_width="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/aboutdeveloper"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/remarktextview"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:text="@string/aboutdeveloper"
        android:layout_height="wrap_content" />


</LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="right"
        >
        <Button
            android:id="@+id/receivebutton"
            android:text="@string/getmsgnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:text="@string/openmsgnow"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
