<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/toolbarstyle"
        android:id="@+id/toolbar"
        >
        <ImageButton
            android:id="@+id/toobarback1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/toolbarbackicon"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="right">
            <TextView
                style="@style/toolbartextviewstyle"
                android:text="@string/regist"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <ImageButton
                    android:id="@+id/registbutton"
                    android:layout_marginRight="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/sureicon"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorbackground"
        >
        <LinearLayout
            android:layout_below="@+id/l_usericon"
            android:id="@+id/l_useremail"
            android:layout_marginTop="12dp"
            android:layout_height="36dp"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/e_useremail"
                android:singleLine="true"
                android:hint="@string/useremail"
                android:inputType="textEmailAddress"
                style="@style/loginregistedittextstyle"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/l_useremail"
            android:id="@+id/l_userpassword"
            android:layout_marginTop="12dp"
            android:layout_height="36dp"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/e_userpassword"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/userpassword"
                style="@style/loginregistedittextstyle"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/l_userpassword"
            android:id="@+id/l_userpasswordagain"
            android:layout_marginTop="12dp"
            android:layout_height="36dp"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/e_userpasswordagain"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/usrepassword_again"
                style="@style/loginregistedittextstyle"
                />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
    <!--
        <LinearLayout
            android:layout_below="@+id/l_userpassword"
            android:id="@+id/l_idnumber"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="36dp">
            <EditText
                android:id="@+id/e_idnumber"
                android:textColorHint="@color/colorbackground"
                style="@style/registedittextstyle"
                />
        </LinearLayout>-->
    <!--       <LinearLayout
               android:id="@+id/l_userrealname"
               android:layout_marginTop="12dp"
               android:layout_height="36dp"
               android:layout_width="match_parent"
               android:layout_below="@+id/l_username">
               <EditText
                   android:id="@+id/e_userrealname"
                   style="@style/registedittextstyle"
                   android:hint="@string/userreallyname"

                   />
           </LinearLayout>-->
    <!--        <LinearLayout
                android:layout_below="@id/l_idnumber"
                android:id="@+id/l_usersex"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <Spinner
                    android:id="@+id/s_usersex"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/usersuggestionedittext"
                    />
            </LinearLayout>-->
    <!--   <LinearLayout
           android:layout_below="@+id/l_usersex"
           android:id="@+id/l_useryearold"
           android:layout_width="match_parent"
           android:layout_marginTop="12dp"
           android:layout_height="36dp">
           <EditText
               android:id="@+id/e_useryearold"
               android:hint="@string/useryearold"
               style="@style/registedittextstyle"
               />
       </LinearLayout>
-->




